LC Codeforces practice

--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -4023,7 +4023,7 @@
     "tags": []
    },
    "source": [
-    "Codeforces practice"
+    "Codeforces practice - Math"
    ]
   },
   {
@@ -4120,6 +4120,7 @@
      "iopub.status.idle": "2024-07-07T17:13:35.528154Z",
      "shell.execute_reply": "2024-07-07T17:13:35.527717Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.017698,
      "end_time": "2024-07-07T17:13:35.529285",
@@ -4139,6 +4140,116 @@
     "assert floor_number(2, 100) == 1\n",
     "assert floor_number(7, 3) == 3\n",
     "assert floor_number(987, 13) == 77"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98cf5dcc",
+   "metadata": {},
+   "source": [
+    "Codeforces practice - Binary Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b667d14c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def magic_powder(magic_powder: int, required: list[int], available: list[int]) -> int:\n",
+    "    def check(qty: int) -> bool:\n",
+    "        powder = magic_powder\n",
+    "        for req, avail in zip(required, available):\n",
+    "            powder -= max(0, (req * qty) - avail)\n",
+    "        return powder >= 0\n",
+    "\n",
+    "    low = min(avail // req for req, avail in zip(required, available))\n",
+    "    high = low + magic_powder\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if check(mid):\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return high\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert magic_powder(1, [2,1,4], [11,3,16]) == 4\n",
+    "assert magic_powder(3, [4,3,5,6], [11,12,14,20]) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecdbcce3",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def pipeline(n: int, k: int) -> int:\n",
+    "    def check(i: int) -> bool:\n",
+    "        \"\"\"\n",
+    "        Check if connecting the largest 'i' pipes would give flow >= n\n",
+    "        Sum of arithmetic progression: sn = n * ((a1 + an) / 2)\n",
+    "        \"\"\"\n",
+    "        max_sum = (i * (k + k - i + 1) // 2) - i + 1\n",
+    "        return max_sum >= n\n",
+    "\n",
+    "    low, high = 0, k\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if check(mid):\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "\n",
+    "    return low if low <= k else -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert pipeline(8, 4) == -1\n",
+    "assert pipeline(5, 5) == 1\n",
+    "assert pipeline(4, 3) == 2\n",
+    "assert pipeline(1, 4) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c05099b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def poisoned_dagger(N: int, hp: int, seconds: list[int]) -> int:\n",
+    "    def check(k: int) -> bool:\n",
+    "        damage = 0\n",
+    "        for i in range(N):\n",
+    "            damage += min(k, seconds[i + 1] - seconds[i])\n",
+    "\n",
+    "        return damage >= hp\n",
+    "\n",
+    "    # Update seconds for the sake of 'check'\n",
+    "    seconds.append(seconds[-1] + hp)\n",
+    "\n",
+    "    # Binary search\n",
+    "    low, high = 1, hp\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if check(mid):\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "    return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert poisoned_dagger(2, 5, [1, 5]) == 3\n",
+    "assert poisoned_dagger(3, 10, [2, 4, 10]) == 4\n",
+    "assert poisoned_dagger(5, 3, [1, 2, 4, 5, 7]) == 1\n",
+    "assert poisoned_dagger(4, 1000, [3, 25, 64, 1337]) == 470"
    ]
   }
  ],
