Codeforces Practice - 12th July 2024

--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -4709,7 +4709,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "74218c0a",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def longest_good_sequence(N: int, arr: list[int]) -> int:\n",
@@ -4738,6 +4740,75 @@
     "# Testing the solution\n",
     "assert longest_good_sequence(5, [2,3,4,6,9]) == 4\n",
     "assert longest_good_sequence(9, [1,2,3,5,6,7,8,9,10]) == 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c05a06f",
+   "metadata": {},
+   "source": [
+    "Codeforces Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cad74e8d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Taxes\n",
+    "def minimum_taxes(N: int) -> int:\n",
+    "    \"\"\"\n",
+    "    https://codeforces.com/blog/entry/48659\n",
+    "\n",
+    "    Uses goldbach's conjecture: Every even natural number > 2 can be repr as sum of two primes.\n",
+    "    Every odd number can be repr as 3, n - 3 (even)\n",
+    "    \"\"\"\n",
+    "    def check_prime(n: int) -> bool:\n",
+    "        count, i = 0, 1\n",
+    "        while i * i <= n:\n",
+    "            if n % i == 0:\n",
+    "                count += 1 if n / i == i else 2\n",
+    "            i += 1\n",
+    "        return count == 2\n",
+    "\n",
+    "    # Prime itself\n",
+    "    if check_prime(N):\n",
+    "        return 1\n",
+    "\n",
+    "    # Even or if we can split N into [2, Prime]\n",
+    "    elif N % 2 == 0 or check_prime(N - 2):\n",
+    "        return 2\n",
+    "\n",
+    "    # Turn it into even for goldbach's conjecture to apply\n",
+    "    else:\n",
+    "        return 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa2c4073",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New Year's Eve\n",
+    "def new_years_eve(N: int, K: int) -> int:\n",
+    "    \"Simply count the number of bits\"\n",
+    "    if K > 1:\n",
+    "        count = 0\n",
+    "        while N > 0:\n",
+    "            N, count = N >> 1, count + 1\n",
+    "        return 2 ** count - 1\n",
+    "    else:\n",
+    "        return N\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert new_years_eve(20, 2) == 31\n",
+    "assert new_years_eve(20, 1) == 20"
    ]
   }
  ],
