--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -4826,6 +4826,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf5e096f",
+   "metadata": {},
+   "source": [
+    "Codeforces practice: Bit Manipulation / Powerset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "id": "aa2c4073",
@@ -4836,6 +4844,7 @@
      "iopub.status.idle": "2024-07-12T15:35:53.369509Z",
      "shell.execute_reply": "2024-07-12T15:35:53.369107Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.019008,
      "end_time": "2024-07-12T15:35:53.370538",
@@ -4861,6 +4870,119 @@
     "# Testing the solution\n",
     "assert new_years_eve(20, 2) == 31\n",
     "assert new_years_eve(20, 1) == 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3682be9b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Special Numbers\n",
+    "def special_numbers(n: int, k: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Thought this solution after some trial n error.\n",
+    "    Observation: Positions of a number in the series:\n",
+    "    - n = 3\n",
+    "        - 3^0 => 1 => 1\n",
+    "        - 3^1 => 3 => 2\n",
+    "        - 3^2 => 9 => 4\n",
+    "        - 3^3 => 27 => 8\n",
+    "\n",
+    "    - n = 4\n",
+    "        - 4^0 => 1 => 1\n",
+    "        - 4^1 => 4 => 2\n",
+    "        - 4^2 => 8 => 4\n",
+    "\n",
+    "    - We can narrow down the position simply find 2 ** (logn (some number))\n",
+    "    - How to find the points in between: Represent them as intermediate powers of n\n",
+    "\n",
+    "    For eg:\n",
+    "        f(3, 11) -> f(3, 8) + f(3, 2) + f(3, 1)\n",
+    "        f(4, 15) -> f(4, 8) + f(4, 4) + f(4, 2) + f(4, 1)\n",
+    "    \"\"\"\n",
+    "    MOD = int(1e9 + 7)\n",
+    "    result: int = 0\n",
+    "    while k > 0:\n",
+    "        power = int(math.log(k, 2))\n",
+    "        result, k = result + pow(n, power, MOD), k - 2 ** power\n",
+    "\n",
+    "    return result % MOD\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert special_numbers(3, 4) == 9\n",
+    "assert special_numbers(2, 12) == 12\n",
+    "assert special_numbers(105, 564) == 3595374"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8614749",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Petr and a combination lock\n",
+    "def combination_lock(N: int, rotations: list[int]) -> bool:\n",
+    "    def backtrack(i: int, sum_: int) -> bool:\n",
+    "        if i == N:\n",
+    "            return sum_ % 360 == 0\n",
+    "        else:\n",
+    "            return backtrack(i + 1, sum_ - rotations[i]) or backtrack(i + 1, sum_ + rotations[i])\n",
+    "\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert combination_lock(3, [10, 20, 30]) == True\n",
+    "assert combination_lock(3, [10, 10, 10]) == False\n",
+    "assert combination_lock(3, [120, 120, 120]) == True\n",
+    "assert combination_lock(2, [360, 360]) == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbb7239e",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "# Array Elimination\n",
+    "def array_elimination(N: int, arr: list[int]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    https://codeforces.com/blog/entry/95865\n",
+    "    https://www.youtube.com/watch?v=SxV8HL2xH2k\n",
+    "\n",
+    "    Don't fully understand the workings yet.\n",
+    "    Solution:\n",
+    "        - Count number of bits for all positions for all elements\n",
+    "        - Compute GCD of bit counts in prev step\n",
+    "        - For K to be a valid elimation, K % GCD == 0\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Count the number of bits for each number\n",
+    "    bit_counts: list[int] = [0 for i in range(64)]\n",
+    "    for n in arr:\n",
+    "        pos = 0\n",
+    "        while n > 0:\n",
+    "            bit_counts[pos], n, pos = bit_counts[pos] + (n & 1), n >> 1, pos + 1\n",
+    "\n",
+    "    # Compute GCD of all counts\n",
+    "    GCD: int = functools.reduce(math.gcd, bit_counts, 0)\n",
+    "\n",
+    "    # For each i->N, check if i is divisible by GCD\n",
+    "    return [i for i in range(1, N + 1) if GCD % i == 0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert array_elimination(6, [3,5,3,1,7,1]) == [1]\n",
+    "assert array_elimination(4, [4,4,4,4]) == [1,2,4]\n",
+    "assert array_elimination(5, [0,0,0,0,0]) == [1,2,3,4,5]"
    ]
   }
  ],
