--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -4992,7 +4992,7 @@
      "iopub.status.idle": "2024-07-13T15:59:12.546353Z",
      "shell.execute_reply": "2024-07-13T15:59:12.545912Z"
     },
-    "lines_to_next_cell": 2,
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.020952,
      "end_time": "2024-07-13T15:59:12.547384",
@@ -5034,6 +5034,307 @@
     "assert array_elimination(6, [3,5,3,1,7,1]) == [1]\n",
     "assert array_elimination(4, [4,4,4,4]) == [1,2,4]\n",
     "assert array_elimination(5, [0,0,0,0,0]) == [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cbcbafc",
+   "metadata": {},
+   "source": [
+    "LC Weekly: 14th July 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79f3a164",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "def getSmallestString(s: str) -> str:\n",
+    "    N = len(s)\n",
+    "    str_list: list[str] = list(s)\n",
+    "    for i in range(N - 1):\n",
+    "        if int(str_list[i]) % 2 == int(str_list[i + 1]) % 2 and int(str_list[i]) > int(str_list[i + 1]):\n",
+    "            str_list[i], str_list[i + 1] = str_list[i + 1], str_list[i]\n",
+    "            break\n",
+    "    return ''.join(str_list)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert getSmallestString(\"45320\") == \"43520\"\n",
+    "assert getSmallestString(\"001\") == \"001\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baa60f53",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2\n",
+    "def modifiedList(nums: list[int], head: ListNode) -> ListNode:\n",
+    "    nums_set: set[int] = set(nums)\n",
+    "    prev, curr = None, head\n",
+    "    while curr:\n",
+    "        if curr.val in nums_set:\n",
+    "            if prev:\n",
+    "                prev.next = curr.next\n",
+    "            else:\n",
+    "                head = head.next\n",
+    "            curr = curr.next\n",
+    "        else:\n",
+    "            prev, curr = curr, curr.next\n",
+    "\n",
+    "    return head\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert modifiedList([1,2,3], ListNode.to_singly_linked_list([1,2,3,4,5])).to_list() == [4,5]\n",
+    "assert modifiedList([1], ListNode.to_singly_linked_list([1,2,1,2,1,2])).to_list() == [2,2,2]\n",
+    "assert modifiedList([5], ListNode.to_singly_linked_list([1,2,3,4])).to_list() == [1,2,3,4]\n",
+    "assert modifiedList([1], ListNode.to_singly_linked_list([1,1])) is None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d463e94",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q3,4\n",
+    "def minimumCostCakes(m: int, n: int, horizontalCut: list[int], verticalCut: list[int]) -> int:\n",
+    "    cuts: list[tuple[int, str]] = sorted([*map(lambda x: (x, 'H'), horizontalCut), *map(lambda x: (x, 'V'), verticalCut)])\n",
+    "    total_cost, rows, cols = 0, 1, 1\n",
+    "    while cuts:\n",
+    "        cost, direction = cuts.pop()\n",
+    "        if direction == 'H':\n",
+    "            total_cost, cols = total_cost + (rows * cost), cols + 1\n",
+    "        else:\n",
+    "            total_cost, rows = total_cost + (cols * cost), rows + 1\n",
+    "\n",
+    "    return total_cost\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumCostCakes(3, 2, [1,3], [5]) == 13\n",
+    "assert minimumCostCakes(2, 2, [7], [4]) == 15"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d39bbb8",
+   "metadata": {},
+   "source": [
+    "Codeforces Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0f653bf",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Powers of Two\n",
+    "def powers_of_two(n: int, k: int) -> list[int]:\n",
+    "    min_power_sum: list[int] = []\n",
+    "    curr = n\n",
+    "    while curr:\n",
+    "        power = int(math.log2(curr))\n",
+    "        sub = 2 ** power\n",
+    "        min_power_sum.append(sub)\n",
+    "        curr -= sub\n",
+    "\n",
+    "    if (min_length := len(min_power_sum)) > k or k > n:\n",
+    "        return []\n",
+    "    else:\n",
+    "        freq: collections.defaultdict[int, int] = collections.defaultdict(int)\n",
+    "        curr = min_power_sum[0]\n",
+    "        while min_power_sum:\n",
+    "            freq[min_power_sum.pop()] = 1\n",
+    "\n",
+    "        for i in range(k - min_length):\n",
+    "            freq[curr] -= 1\n",
+    "            freq[curr // 2] += 2\n",
+    "            if not freq[curr]:\n",
+    "                freq.pop(curr)\n",
+    "                curr //= 2\n",
+    "\n",
+    "        result: list[int] = []\n",
+    "        for x, v in sorted(freq.items()):\n",
+    "            result.extend([x] * v)\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "for n, freq, exists in [(1000, 8, True), (9, 4, True), (8, 1, True), (5, 1, False)]:\n",
+    "    power_of_two_result = powers_of_two(n, freq)\n",
+    "    if power_of_two_result:\n",
+    "        assert all(map(lambda x: math.log2(x).is_integer(), power_of_two_result)), \"Result contains numbers that are not powers of 2.\"\n",
+    "        assert sum(power_of_two_result) == n and len(power_of_two_result) == freq, \"Length / Sum doesn't match expected values.'\"\n",
+    "    else:\n",
+    "        assert not power_of_two_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c40cf07c",
+   "metadata": {},
+   "source": [
+    "Codeforces: Stacks, Queues, PQueues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28fe2beb",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Alternating current\n",
+    "def untangle_wires(wires: str) -> bool:\n",
+    "    stack: list[str] = []\n",
+    "    for wire in wires:\n",
+    "        if stack and stack[-1] == wire:\n",
+    "            stack.pop()\n",
+    "        else:\n",
+    "            stack.append(wire)\n",
+    "\n",
+    "    return len(stack) == 0\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert untangle_wires(\"-++-\") == True\n",
+    "assert untangle_wires(\"+-\") == False\n",
+    "assert untangle_wires(\"++\") == True\n",
+    "assert untangle_wires(\"-\") == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "602237bf",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# CD & PWD Commands\n",
+    "def linux_change_directory(commands: list[str]) -> list[str]:\n",
+    "    results: list[str] = []\n",
+    "\n",
+    "    pwd_: list[str] = []\n",
+    "    for command in commands:\n",
+    "        if not command:\n",
+    "            results.append(\"/\" + \"/\".join(pwd_) + (\"/\" if pwd_ else \"\"))\n",
+    "        else:\n",
+    "            if command[0] == \"/\":\n",
+    "                pwd_.clear()\n",
+    "            for folder in command.split(\"/\"):\n",
+    "                if not folder:\n",
+    "                    continue\n",
+    "                elif folder == \"..\":\n",
+    "                    pwd_.pop()\n",
+    "                else:\n",
+    "                    pwd_.append(folder)\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert linux_change_directory([\"\", \"/home/vasya\", \"\", \"..\", \"\", \"vasya/../petya\", \"\"]) == ['/', '/home/vasya/', '/home/', '/home/petya/']\n",
+    "assert linux_change_directory([\"/a/b\", \"\", \"../a/b\", \"\"]) == [\"/a/b/\", \"/a/a/b/\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d23a22a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Longest Regular Bracket Sequence\n",
+    "def longestBracketSequence(sequence: str) -> tuple[int, int]:\n",
+    "    # Compute valid sequence intervals\n",
+    "    stack: list[int] = []\n",
+    "    valid_sequences: list[tuple[int, int]] = []\n",
+    "    for end in range(len(sequence)):\n",
+    "        if sequence[end] == \"(\":\n",
+    "            stack.append(end)\n",
+    "        elif sequence[end] == \")\" and stack and sequence[stack[-1]] == \"(\":\n",
+    "            start = stack.pop()\n",
+    "            valid_sequences.append((start, end))\n",
+    "\n",
+    "    # Merge intervals\n",
+    "    valid_sequences.sort(key=lambda x: x[1])\n",
+    "    merged_intervals: list[tuple[int, int]] = []\n",
+    "    for start, end in valid_sequences:\n",
+    "        while merged_intervals and start - 1 <= merged_intervals[-1][1]:\n",
+    "            prev_start, prev_end = merged_intervals.pop()\n",
+    "            start, end = min(prev_start, start), max(prev_end, end)\n",
+    "        merged_intervals.append((start, end))\n",
+    "\n",
+    "    # Compute longest seq, freq\n",
+    "    longest, freq = 0, 0\n",
+    "    for start, end in merged_intervals:\n",
+    "        length = end - start + 1\n",
+    "        if length == longest:\n",
+    "            freq += 1\n",
+    "        elif length > longest:\n",
+    "            longest, freq = length, 1\n",
+    "\n",
+    "    return longest, (freq if longest > 0 else 1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestBracketSequence(\")((())))(()())\") == (6, 2)\n",
+    "assert longestBracketSequence(\"))(\") == (0, 1)\n",
+    "assert longestBracketSequence(\"()((()(()(())()()())((()(())()(()()()()))()(())()(((()())()(()((())()(())(()))\") == (28, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fa1df09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Great Vova Wall\n",
+    "def vovaWall1(N: int, arr: list[int]) -> bool:\n",
+    "    \"\"\"\n",
+    "    Instead of trying to construct the wall, check if we can raze it to the\n",
+    "    ground by removing bricks per the rules.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Remove all 1 x 2 bricks\n",
+    "    for i in range(N):\n",
+    "        arr[i] %= 2\n",
+    "\n",
+    "    # Remove all 2 x 1 bricks\n",
+    "    stack: list[int] = []\n",
+    "    for n in arr:\n",
+    "        if stack and stack[-1] == n:\n",
+    "            stack.pop()\n",
+    "        else:\n",
+    "            stack.append(n)\n",
+    "\n",
+    "    return len(stack) <= 1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert vovaWall1(5, [2,1,1,2,5]) == True\n",
+    "assert vovaWall1(3, [4,5,3]) == True\n",
+    "assert vovaWall1(2, [10,10]) == True\n",
+    "assert vovaWall1(3, [1,2,3]) == False"
    ]
   }
  ],
