Codeforces Practice - 16th July 2024

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -383,6 +383,7 @@
      "iopub.status.idle": "2024-07-15T15:15:47.299289Z",
      "shell.execute_reply": "2024-07-15T15:15:47.298862Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009383,
      "end_time": "2024-07-15T15:15:47.300308",
@@ -422,6 +423,96 @@
     "# Testing the solution\n",
     "assert createBinaryTree([[20,15,1],[20,17,0],[50,20,1],[50,80,0],[80,19,1]]).to_list() == [50,20,80,15,17,19]\n",
     "assert createBinaryTree([[1,2,1],[2,3,0],[3,4,1]]).to_list() == [1,2,None,None,3,4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c157b54c",
+   "metadata": {},
+   "source": [
+    "KMP Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3898dc59",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def create_lps_array(pattern: str) -> list[int]:\n",
+    "    N = len(pattern)\n",
+    "    pi: list[int] = [0] * N\n",
+    "    j = 0\n",
+    "    for i in range(1, N):\n",
+    "        while pattern[j] != pattern[i] and j > 0:\n",
+    "            j = pi[j - 1]\n",
+    "        if pattern[i] == pattern[j]:\n",
+    "            j += 1\n",
+    "        pi[i] = j\n",
+    "\n",
+    "    return pi\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert create_lps_array(\"abcdabc\") == [0, 0, 0, 0, 1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ee5d9b0",
+   "metadata": {},
+   "source": [
+    "Codeforces Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b252c334",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longest_prefix_suffix_palindome(S: str) -> str:\n",
+    "    def KMP(pattern: str) -> list[int]:\n",
+    "        pattern_length = len(pattern)\n",
+    "        pi: list[int] = [0] * pattern_length\n",
+    "        j = 0\n",
+    "        for i in range(1, pattern_length):\n",
+    "            while pattern[i] != pattern[j] and j > 0:\n",
+    "                j = pi[j - 1]\n",
+    "            if pattern[i] == pattern[j]:\n",
+    "                j += 1\n",
+    "            pi[i] = j\n",
+    "\n",
+    "        return pi\n",
+    "\n",
+    "    N = len(S)\n",
+    "    i, j = 0, N - 1\n",
+    "\n",
+    "    # Find greatest k such that S[0..k] + S[N - k - 1.. N - 1] is a palindrome\n",
+    "    k = 0\n",
+    "    for k in range(N // 2):\n",
+    "        if S[k] != S[N - k - 1]:\n",
+    "            break\n",
+    "\n",
+    "    # Find longest prefix-suffix of S[k..N-k-1]\n",
+    "    middle = S[k: N - k]\n",
+    "    lps = middle[:KMP(middle + '#' + middle[::-1])[-1]]\n",
+    "\n",
+    "    # Find longest prefix-suffix of reversed(S[k..N-k-1])\n",
+    "    middle_reversed = middle[::-1]\n",
+    "    lps_reversed = middle_reversed[:KMP(middle_reversed + '#' + middle_reversed[::-1])[-1]]\n",
+    "\n",
+    "    return S[:k] + (lps if len(lps) > len(lps_reversed) else lps_reversed[::-1]) + S[N - k:]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert len(longest_prefix_suffix_palindome(\"abcdfdcecba\")) == len(\"abcdfdcba\")\n",
+    "assert len(longest_prefix_suffix_palindome(\"abbaxyzyx\")) == len(\"xyzyx\")\n",
+    "assert len(longest_prefix_suffix_palindome(\"acbba\")) == len(\"abba\")\n",
+    "assert len(longest_prefix_suffix_palindome(\"a\")) == len(\"a\")\n",
+    "assert len(longest_prefix_suffix_palindome(\"codeforces\")) == len(\"c\")"
    ]
   }
  ],
