--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -510,6 +510,7 @@
      "iopub.status.idle": "2024-07-16T17:06:51.879177Z",
      "shell.execute_reply": "2024-07-16T17:06:51.878771Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009991,
      "end_time": "2024-07-16T17:06:51.880251",
@@ -560,6 +561,92 @@
     "assert len(longest_prefix_suffix_palindome(\"acbba\")) == len(\"abba\")\n",
     "assert len(longest_prefix_suffix_palindome(\"a\")) == len(\"a\")\n",
     "assert len(longest_prefix_suffix_palindome(\"codeforces\")) == len(\"c\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6f93b0e",
+   "metadata": {},
+   "source": [
+    "#### LC Practice - Strings - KMP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cdab853",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# LC: https://leetcode.com/problems/find-the-index-of-the-first-occurrence-in-a-string/\n",
+    "def strStr(haystack: str, needle: str) -> int:\n",
+    "    def create_lps(pattern: str, M: int) -> list[int]:\n",
+    "        j = 0\n",
+    "        lps = [0] * M\n",
+    "        for i in range(1, M):\n",
+    "            while pattern[i] != pattern[j] and j > 0:\n",
+    "                j = lps[j - 1]\n",
+    "            if pattern[i] == pattern[j]:\n",
+    "                j += 1\n",
+    "            lps[i] = j\n",
+    "\n",
+    "        return lps\n",
+    "\n",
+    "    N, M = len(haystack), len(needle)\n",
+    "    lps = create_lps(needle, M)\n",
+    "    j = 0\n",
+    "    for i in range(N):\n",
+    "        while haystack[i] != needle[j] and j > 0:\n",
+    "            j = lps[j - 1]\n",
+    "        if haystack[i] == needle[j]:\n",
+    "            j += 1\n",
+    "        if j >= M:\n",
+    "            return i - j + 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert strStr(\"asabadzabababababaaababaabba\", \"abababab\") == 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5232f86f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/repeated-substring-pattern/\n",
+    "def repeatedSubstringPattern(S: str) -> bool:\n",
+    "    def create_lps(pattern: str) -> list[int]:\n",
+    "        pattern_length, j = len(pattern), 0\n",
+    "        lps: list[int] = [0] * pattern_length\n",
+    "        for i in range(1, pattern_length):\n",
+    "            while pattern[i] != pattern[j] and j > 0:\n",
+    "                j = lps[j - 1]\n",
+    "            if pattern[i] == pattern[j]:\n",
+    "                j += 1\n",
+    "            lps[i] = j\n",
+    "\n",
+    "        return lps\n",
+    "\n",
+    "    # Create LPS, find the longest repeating pattern length\n",
+    "    # Ensure that the pattern repeats itself\n",
+    "    N = len(S)\n",
+    "    lps = create_lps(S)\n",
+    "    repeat_str_length = N - lps[-1]\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        if S[i % repeat_str_length] != S[i]:\n",
+    "            return False\n",
+    "    return (repeat_str_length < N) and (N % repeat_str_length == 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert repeatedSubstringPattern(\"acbaaacbaa\") == repeatedSubstringPattern(\"aaabbaaabb\") == True\n",
+    "assert repeatedSubstringPattern(\"abcabcabc\") == repeatedSubstringPattern(\"abaababaab\") == True\n",
+    "assert repeatedSubstringPattern(\"abcabcabz\") == repeatedSubstringPattern(\"aba\") == False"
    ]
   }
  ],
