CF Practice - 17th July 2024

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -645,6 +645,7 @@
      "iopub.status.idle": "2024-07-17T02:16:22.002430Z",
      "shell.execute_reply": "2024-07-17T02:16:22.001905Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009802,
      "end_time": "2024-07-17T02:16:22.003465",
@@ -685,6 +686,116 @@
     "assert repeatedSubstringPattern(\"acbaaacbaa\") == repeatedSubstringPattern(\"aaabbaaabb\") == True\n",
     "assert repeatedSubstringPattern(\"abcabcabc\") == repeatedSubstringPattern(\"abaababaab\") == True\n",
     "assert repeatedSubstringPattern(\"abcabcabz\") == repeatedSubstringPattern(\"aba\") == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "301b862f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# TLE :(\n",
+    "def watto_mechanism_trie(input_patterns: list[str], search_patterns: list[str]) -> list[bool]:\n",
+    "    class TrieNode:\n",
+    "        def __init__(self, end: bool = False):\n",
+    "            self.nodes: collections.defaultdict[str, 'TrieNode'] = collections.defaultdict(TrieNode)\n",
+    "            self.end: bool = end\n",
+    "\n",
+    "        def __getitem__(self, ch: str) -> 'TrieNode':\n",
+    "            return self.nodes[ch]\n",
+    "\n",
+    "    def search(string: str) -> bool:\n",
+    "        N = len(string)\n",
+    "        stack: list[tuple[TrieNode, int, bool]] = [(ROOT, 0, True)]\n",
+    "        while stack:\n",
+    "            curr, idx, editable = stack.pop()\n",
+    "            if idx == N:\n",
+    "                if not editable and curr.end:\n",
+    "                    return True\n",
+    "            else:\n",
+    "                for next_ch in ['a', 'b', 'c']:\n",
+    "                    if next_ch in curr.nodes:\n",
+    "                        if next_ch == string[idx]:\n",
+    "                            stack.append((curr[next_ch], idx + 1, editable))\n",
+    "                        elif next_ch != string[idx] and editable:\n",
+    "                            stack.append((curr[next_ch], idx + 1, False))\n",
+    "        return False\n",
+    "\n",
+    "    # Convert the input patterns into a trie data strucute\n",
+    "    ROOT = TrieNode()\n",
+    "    for inp in input_patterns:\n",
+    "        curr = ROOT\n",
+    "        for ch in inp:\n",
+    "            curr = curr[ch]\n",
+    "        curr.end = True\n",
+    "\n",
+    "    results: list[bool] = []\n",
+    "    for search_pattern in search_patterns:\n",
+    "        results.append(search(search_pattern))\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert watto_mechanism_trie([\"aaaaa\", \"acacaca\"], [\"aabaa\", \"ccacacc\", \"caaac\"]) == [True, False, False]\n",
+    "assert watto_mechanism_trie([\"acbacbacb\"], [\"cbacbacb\", \"acbacbac\", \"aacbacbacb\", \"acbacbacbb\", \"acbaabacb\"]) == [False, False, False, False, True]\n",
+    "assert watto_mechanism_trie([\"ab\", \"cacab\", \"cbabc\", \"acc\", \"cacab\"], [\"abc\", \"aa\", \"acbca\", \"cb\"]) == [True, True, False, True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6731b9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def watto_mechanism(input_patterns: list[str], search_patterns: list[str]) -> list[bool]:\n",
+    "    \"\"\"\n",
+    "    Idea from editorial:\n",
+    "        1. Compute and store the polynomial rolling hashes for each of the input_patterns\n",
+    "        2. For each search string, compute possibilities and check if they exist in the hash\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Constants for polynomial rolling hash\n",
+    "    P, M = 257, 2 ** 61 + 7\n",
+    "\n",
+    "    def poly_hash(string: str) -> int:\n",
+    "        nonlocal P, M\n",
+    "        N, hash_val, p_ = len(string), 0, 1\n",
+    "        for i in range(N):\n",
+    "            hash_val = (hash_val + (ord(string[i]) * p_)) % M\n",
+    "            p_ = (p_ * P) % M\n",
+    "        return hash_val\n",
+    "\n",
+    "    def search(string: str) -> bool:\n",
+    "        nonlocal P, M\n",
+    "        N, hash_val, p_ = len(string), poly_hash(string), 1\n",
+    "        for i in range(N):\n",
+    "            for ch in ('a', 'b', 'c'):\n",
+    "                modified_hash = (hash_val + (ord(ch) - ord(string[i])) * p_) % M\n",
+    "                if ch != string[i] and modified_hash in hashes:\n",
+    "                    return True\n",
+    "            p_ = (p_ * P) % M\n",
+    "        return False\n",
+    "\n",
+    "    # Store all the input strs as poly hashes\n",
+    "    hashes: set[int] = set()\n",
+    "    for inp in input_patterns:\n",
+    "        hashes.add(poly_hash(inp))\n",
+    "\n",
+    "    # Iterate through the search strings, compute all hashes for all combinations in O(1) time\n",
+    "    results: list[bool] = []\n",
+    "    for inp in search_patterns:\n",
+    "        results.append(search(inp))\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert watto_mechanism([\"aaaaa\", \"acacaca\"], [\"aabaa\", \"ccacacc\", \"caaac\"]) == [True, False, False]\n",
+    "assert watto_mechanism([\"acbacbacb\"], [\"cbacbacb\", \"acbacbac\", \"aacbacbacb\", \"acbacbacbb\", \"acbaabacb\"]) == [False, False, False, False, True]\n",
+    "assert watto_mechanism([\"ab\", \"cacab\", \"cbabc\", \"acc\", \"cacab\"], [\"abc\", \"aa\", \"acbca\", \"cb\"]) == [True, True, False, True]"
    ]
   }
  ],
