--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -6,16 +6,16 @@
    "id": "1dbda701",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:32.691999Z",
-     "iopub.status.busy": "2024-07-18T14:35:32.691610Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.033451Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.032864Z"
+     "iopub.execute_input": "2024-07-19T03:12:26.997049Z",
+     "iopub.status.busy": "2024-07-19T03:12:26.996667Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.339170Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.338691Z"
     },
     "papermill": {
-     "duration": 0.347592,
-     "end_time": "2024-07-18T14:35:33.034956",
+     "duration": 0.348318,
+     "end_time": "2024-07-19T03:12:27.340578",
      "exception": false,
-     "start_time": "2024-07-18T14:35:32.687364",
+     "start_time": "2024-07-19T03:12:26.992260",
      "status": "completed"
     },
     "tags": []
@@ -60,10 +60,10 @@
    "id": "a161421c",
    "metadata": {
     "papermill": {
-     "duration": 0.0025,
-     "end_time": "2024-07-18T14:35:33.040265",
+     "duration": 0.002689,
+     "end_time": "2024-07-19T03:12:27.346322",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.037765",
+     "start_time": "2024-07-19T03:12:27.343633",
      "status": "completed"
     },
     "tags": []
@@ -78,17 +78,17 @@
    "id": "07be0a7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:33.046524Z",
-     "iopub.status.busy": "2024-07-18T14:35:33.046199Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.053650Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.053104Z"
+     "iopub.execute_input": "2024-07-19T03:12:27.352785Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.352291Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.359411Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.358963Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.012006,
-     "end_time": "2024-07-18T14:35:33.054780",
+     "duration": 0.01158,
+     "end_time": "2024-07-19T03:12:27.360508",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.042774",
+     "start_time": "2024-07-19T03:12:27.348928",
      "status": "completed"
     },
     "tags": []
@@ -152,10 +152,10 @@
    "id": "6e9c13aa",
    "metadata": {
     "papermill": {
-     "duration": 0.002433,
-     "end_time": "2024-07-18T14:35:33.059630",
+     "duration": 0.002587,
+     "end_time": "2024-07-19T03:12:27.365776",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.057197",
+     "start_time": "2024-07-19T03:12:27.363189",
      "status": "completed"
     },
     "tags": []
@@ -170,17 +170,17 @@
    "id": "6abb9392",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:33.065589Z",
-     "iopub.status.busy": "2024-07-18T14:35:33.065136Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.069522Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.068988Z"
+     "iopub.execute_input": "2024-07-19T03:12:27.372095Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.371665Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.375998Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.375536Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.008415,
-     "end_time": "2024-07-18T14:35:33.070526",
+     "duration": 0.008614,
+     "end_time": "2024-07-19T03:12:27.377022",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.062111",
+     "start_time": "2024-07-19T03:12:27.368408",
      "status": "completed"
     },
     "tags": []
@@ -223,10 +223,10 @@
    "id": "4f436676",
    "metadata": {
     "papermill": {
-     "duration": 0.002357,
-     "end_time": "2024-07-18T14:35:33.075255",
+     "duration": 0.002604,
+     "end_time": "2024-07-19T03:12:27.382249",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.072898",
+     "start_time": "2024-07-19T03:12:27.379645",
      "status": "completed"
     },
     "tags": []
@@ -241,17 +241,17 @@
    "id": "8f687e9e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:33.081850Z",
-     "iopub.status.busy": "2024-07-18T14:35:33.081421Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.093460Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.093018Z"
+     "iopub.execute_input": "2024-07-19T03:12:27.389360Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.388905Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.400937Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.400491Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.016098,
-     "end_time": "2024-07-18T14:35:33.094482",
+     "duration": 0.016375,
+     "end_time": "2024-07-19T03:12:27.402013",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.078384",
+     "start_time": "2024-07-19T03:12:27.385638",
      "status": "completed"
     },
     "tags": []
@@ -360,10 +360,10 @@
    "id": "711735e2",
    "metadata": {
     "papermill": {
-     "duration": 0.002419,
-     "end_time": "2024-07-18T14:35:33.099288",
+     "duration": 0.002581,
+     "end_time": "2024-07-19T03:12:27.407202",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.096869",
+     "start_time": "2024-07-19T03:12:27.404621",
      "status": "completed"
     },
     "tags": []
@@ -378,17 +378,17 @@
    "id": "aec51cad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:33.105044Z",
-     "iopub.status.busy": "2024-07-18T14:35:33.104700Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.110612Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.110157Z"
+     "iopub.execute_input": "2024-07-19T03:12:27.413509Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.413078Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.418732Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.418287Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.009969,
-     "end_time": "2024-07-18T14:35:33.111708",
+     "duration": 0.009975,
+     "end_time": "2024-07-19T03:12:27.419838",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.101739",
+     "start_time": "2024-07-19T03:12:27.409863",
      "status": "completed"
     },
     "tags": []
@@ -430,10 +430,10 @@
    "id": "c157b54c",
    "metadata": {
     "papermill": {
-     "duration": 0.002401,
-     "end_time": "2024-07-18T14:35:33.116640",
+     "duration": 0.00263,
+     "end_time": "2024-07-19T03:12:27.425109",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.114239",
+     "start_time": "2024-07-19T03:12:27.422479",
      "status": "completed"
     },
     "tags": []
@@ -448,17 +448,17 @@
    "id": "3898dc59",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:33.122633Z",
-     "iopub.status.busy": "2024-07-18T14:35:33.122409Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.127326Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.126855Z"
+     "iopub.execute_input": "2024-07-19T03:12:27.431556Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.431123Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.435748Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.435303Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.009279,
-     "end_time": "2024-07-18T14:35:33.128411",
+     "duration": 0.008939,
+     "end_time": "2024-07-19T03:12:27.436782",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.119132",
+     "start_time": "2024-07-19T03:12:27.427843",
      "status": "completed"
     },
     "tags": []
@@ -487,10 +487,10 @@
    "id": "0ee5d9b0",
    "metadata": {
     "papermill": {
-     "duration": 0.002389,
-     "end_time": "2024-07-18T14:35:33.133467",
+     "duration": 0.002613,
+     "end_time": "2024-07-19T03:12:27.442010",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.131078",
+     "start_time": "2024-07-19T03:12:27.439397",
      "status": "completed"
     },
     "tags": []
@@ -505,17 +505,17 @@
    "id": "b252c334",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:33.139658Z",
-     "iopub.status.busy": "2024-07-18T14:35:33.139232Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.146223Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.145769Z"
+     "iopub.execute_input": "2024-07-19T03:12:27.448599Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.448211Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.455082Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.454637Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.01139,
-     "end_time": "2024-07-18T14:35:33.147329",
+     "duration": 0.011328,
+     "end_time": "2024-07-19T03:12:27.456088",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.135939",
+     "start_time": "2024-07-19T03:12:27.444760",
      "status": "completed"
     },
     "tags": []
@@ -568,10 +568,10 @@
    "id": "e6f93b0e",
    "metadata": {
     "papermill": {
-     "duration": 0.002694,
-     "end_time": "2024-07-18T14:35:33.152738",
+     "duration": 0.002615,
+     "end_time": "2024-07-19T03:12:27.461380",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.150044",
+     "start_time": "2024-07-19T03:12:27.458765",
      "status": "completed"
     },
     "tags": []
@@ -586,17 +586,17 @@
    "id": "7cdab853",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:33.159309Z",
-     "iopub.status.busy": "2024-07-18T14:35:33.158816Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.165486Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.164996Z"
+     "iopub.execute_input": "2024-07-19T03:12:27.467683Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.467341Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.473372Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.472967Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.011352,
-     "end_time": "2024-07-18T14:35:33.166626",
+     "duration": 0.010431,
+     "end_time": "2024-07-19T03:12:27.474422",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.155274",
+     "start_time": "2024-07-19T03:12:27.463991",
      "status": "completed"
     },
     "tags": []
@@ -640,17 +640,17 @@
    "id": "5232f86f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:33.173109Z",
-     "iopub.status.busy": "2024-07-18T14:35:33.172580Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.178656Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.178123Z"
+     "iopub.execute_input": "2024-07-19T03:12:27.480764Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.480428Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.486373Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.485920Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.010435,
-     "end_time": "2024-07-18T14:35:33.179692",
+     "duration": 0.010318,
+     "end_time": "2024-07-19T03:12:27.487435",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.169257",
+     "start_time": "2024-07-19T03:12:27.477117",
      "status": "completed"
     },
     "tags": []
@@ -694,17 +694,17 @@
    "id": "301b862f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:33.185690Z",
-     "iopub.status.busy": "2024-07-18T14:35:33.185331Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.193195Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.192769Z"
+     "iopub.execute_input": "2024-07-19T03:12:27.493742Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.493300Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.501597Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.501054Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.01208,
-     "end_time": "2024-07-18T14:35:33.194318",
+     "duration": 0.012603,
+     "end_time": "2024-07-19T03:12:27.502684",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.182238",
+     "start_time": "2024-07-19T03:12:27.490081",
      "status": "completed"
     },
     "tags": []
@@ -764,16 +764,17 @@
    "id": "f6731b9c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-18T14:35:33.200300Z",
-     "iopub.status.busy": "2024-07-18T14:35:33.199948Z",
-     "iopub.status.idle": "2024-07-18T14:35:33.207369Z",
-     "shell.execute_reply": "2024-07-18T14:35:33.206843Z"
+     "iopub.execute_input": "2024-07-19T03:12:27.509072Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.508628Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.515823Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.515384Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.01161,
-     "end_time": "2024-07-18T14:35:33.208421",
+     "duration": 0.011539,
+     "end_time": "2024-07-19T03:12:27.516850",
      "exception": false,
-     "start_time": "2024-07-18T14:35:33.196811",
+     "start_time": "2024-07-19T03:12:27.505311",
      "status": "completed"
     },
     "tags": []
@@ -826,6 +827,138 @@
     "assert watto_mechanism([\"acbacbacb\"], [\"cbacbacb\", \"acbacbac\", \"aacbacbacb\", \"acbacbacbb\", \"acbaabacb\"]) == [False, False, False, False, True]\n",
     "assert watto_mechanism([\"ab\", \"cacab\", \"cbabc\", \"acc\", \"cacab\"], [\"abc\", \"aa\", \"acbca\", \"cb\"]) == [True, True, False, True]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45e647a3",
+   "metadata": {
+    "papermill": {
+     "duration": 0.002641,
+     "end_time": "2024-07-19T03:12:27.522166",
+     "exception": false,
+     "start_time": "2024-07-19T03:12:27.519525",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "Codeforces Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "20dc1c55",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-19T03:12:27.528205Z",
+     "iopub.status.busy": "2024-07-19T03:12:27.528008Z",
+     "iopub.status.idle": "2024-07-19T03:12:27.533451Z",
+     "shell.execute_reply": "2024-07-19T03:12:27.532925Z"
+    },
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.009732,
+     "end_time": "2024-07-19T03:12:27.534501",
+     "exception": false,
+     "start_time": "2024-07-19T03:12:27.524769",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def palindrome_degree(string: str) -> int:\n",
+    "    \"\"\"\n",
+    "    Iterate through string, check if current substr is a palindrome.\n",
+    "    If it is, degree equals degree[substr // 2] + 1.\n",
+    "    Assume degree[substr // 2] if not found as 0.\n",
+    "    Return sum of all degrees.\n",
+    "\n",
+    "    Checking if substr is a palindrome, check if prefix_hash hash(S[i..j]) == rev_prefix_hash hash(S[j..i])\n",
+    "\n",
+    "    PREFIX_HASH = sum(ord(s[i]) * p ** i)\n",
+    "        abc: a + bP + cP^2\n",
+    "\n",
+    "    REV_PREFIX_HASH is a little tricky but when running in a loop it is pretty simple\n",
+    "        abc: (rev_prefix_hash * P) + ord(s[i])\n",
+    "            a -> a\n",
+    "            b -> aP + b\n",
+    "            c -> aP^2 + bP + c\n",
+    "    \"\"\"\n",
+    "    # Paramaters for rolling hash\n",
+    "    P, M = 257, 2**61 - 1\n",
+    "\n",
+    "    N = len(string)\n",
+    "    degree: list[int] = [0 for i in range(N)]\n",
+    "    prefix_hash = rev_prefix_hash = ord(string[0])\n",
+    "    total_degree = degree[0] = 1\n",
+    "    p = P\n",
+    "    for i in range(1, N):\n",
+    "        prefix_hash, p = (prefix_hash + ord(string[i]) * p) % M, (P * p) % M\n",
+    "        rev_prefix_hash = (rev_prefix_hash * P + ord(string[i])) % M\n",
+    "        if prefix_hash == rev_prefix_hash:\n",
+    "            degree[i] = degree[(i - 1) // 2] + 1\n",
+    "            total_degree += degree[i]\n",
+    "\n",
+    "    return total_degree\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert palindrome_degree(\"a2A\") == 1\n",
+    "assert palindrome_degree(\"abacaba\") == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd066408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spy_syndrome2(secret: str, words: list[str]) -> str:\n",
+    "    # Parameters for rolling Hash\n",
+    "    P, M = 257, 10**9 + 7\n",
+    "\n",
+    "    def poly_hash(string: str) -> int:\n",
+    "        nonlocal P, M\n",
+    "        word_length, hash_value, p = len(string), 0, 1\n",
+    "        for i in range(word_length):\n",
+    "            hash_value, p = (hash_value + p * ord(string[i].lower())) % M, (p * P) % M\n",
+    "\n",
+    "        return hash_value\n",
+    "\n",
+    "    # Store the list of words as hashes\n",
+    "    hashes: dict[int, str] = dict()\n",
+    "    for word in words:\n",
+    "        hashes[poly_hash(word)] = word\n",
+    "\n",
+    "    # Compute the rev prefix hash as we iterate through the secret, if\n",
+    "    # match found reset and add to list of words found, note that we\n",
+    "    # might need to backtrack which is handled by the stack code here!\n",
+    "    result: list[str] = []\n",
+    "    secret_length = len(secret)\n",
+    "    stack: list[tuple[int, int]] = [(0, 0)]\n",
+    "    while stack:\n",
+    "        idx, hash_value = stack.pop()\n",
+    "        if idx == secret_length:\n",
+    "            if hash_value == 0:\n",
+    "                break\n",
+    "            else:\n",
+    "                result.pop()\n",
+    "        else:\n",
+    "            hash_value = (hash_value * P + ord(secret[idx].lower())) % M\n",
+    "            stack.append((idx + 1, hash_value))\n",
+    "            if hash_value in hashes:\n",
+    "                result.append(hashes[hash_value])\n",
+    "                stack.append((idx + 1, 0))\n",
+    "\n",
+    "    return ' '.join(result)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert spy_syndrome2(\"ariksihsidlihcdnaehsetahgnisol\", [\"Kira\", \"hates\", \"is\", \"he\", \"losing\", \"death\", \"childish\", \"L\", \"and\", \"Note\"]) == \"Kira is childish and he hates losing\"\n",
+    "assert spy_syndrome2(\"iherehtolleh\", [\"HI\", \"Ho\", \"there\", \"HeLLo\", \"hello\"]).lower() == \"HI there HeLLo\".lower()\n",
+    "assert spy_syndrome2(\"ababaaba\", [\"aba\", \"ababa\"]) == \"ababa aba\""
+   ]
   }
  ],
  "metadata": {
@@ -848,14 +981,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 1.874415,
-   "end_time": "2024-07-18T14:35:33.426209",
+   "duration": 1.90704,
+   "end_time": "2024-07-19T03:12:27.752406",
    "environment_variables": {},
    "exception": null,
    "input_path": "practice/006.ipynb",
    "output_path": "practice/006.ipynb",
    "parameters": {},
-   "start_time": "2024-07-18T14:35:31.551794",
+   "start_time": "2024-07-19T03:12:25.845366",
    "version": "2.6.0"
   }
  },
