CP Practice - 21st July 2024

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -1551,6 +1551,7 @@
      "iopub.status.idle": "2024-07-21T04:15:06.611996Z",
      "shell.execute_reply": "2024-07-21T04:15:06.611479Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013073,
      "end_time": "2024-07-21T04:15:06.612989",
@@ -1605,6 +1606,94 @@
     "# Testing the solution\n",
     "assert minimumOperations([3,5,1,2], [4,6,2,4]) == 2\n",
     "assert minimumOperations([1,3,2], [2,1,4]) == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19c7f6ff",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def dynamic_dyameter(N: int, edges: list[tuple[int, int]]) -> list[int]:\n",
+    "    def BFS(start: int) -> tuple[int, set[int]]:\n",
+    "        distances: collections.defaultdict[int, set[int]] = collections.defaultdict(set)\n",
+    "        queue: collections.deque[tuple[int, int, int]] = collections.deque([(start, 0, 0)])\n",
+    "        max_dist = 0\n",
+    "        while queue:\n",
+    "            curr, prev, dist = queue.popleft()\n",
+    "            distances[dist].add(curr)\n",
+    "            max_dist = max(dist, max_dist)\n",
+    "            for next_ in adjl[curr]:\n",
+    "                if next_ != prev:\n",
+    "                    queue.append((next_, curr, dist + 1))\n",
+    "\n",
+    "        return max_dist, distances[max_dist]\n",
+    "\n",
+    "    # Convert edges to adjancency list\n",
+    "    adjl: collections.defaultdict[int, list[int]] = collections.defaultdict(list)\n",
+    "    for n1, n2 in edges:\n",
+    "        adjl[n1].append(n2)\n",
+    "        adjl[n2].append(n1)\n",
+    "\n",
+    "    # Find the farthest from a random node\n",
+    "    nodes = BFS(1)[1]\n",
+    "    leaves: set[int] = {*nodes}\n",
+    "    D, farthest_nodes = BFS(next(iter(leaves)))\n",
+    "    leaves.update(farthest_nodes)\n",
+    "\n",
+    "    return [D + 1 if i in leaves else D for i in range(1, N + 1)]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert dynamic_dyameter(3, [(3,2), (2,1)]) == [3,2,3]\n",
+    "assert dynamic_dyameter(5, [(4,2), (1,4), (5,4), (3,4)]) == [3,3,3,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5eb47cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def military_problem(n_officers: int, superiors: list[int], queries: list[tuple[int, int]]) -> list[int]:\n",
+    "    adjl: collections.defaultdict[int, list[int]] = collections.defaultdict(list)\n",
+    "    for officer, superior in enumerate(superiors, start=2):\n",
+    "        adjl[superior].append(officer)\n",
+    "\n",
+    "    # DFS starting from the supreme commander - 1\n",
+    "    # Create variables for storing the DFS order and the start/end index for each\n",
+    "    order: list[int] = []\n",
+    "    ranges: collections.defaultdict[int, tuple[int, int]] = collections.defaultdict(lambda: (0, 0))\n",
+    "    stack: list[tuple[int, int]] = [(1, 0)]\n",
+    "    while stack:\n",
+    "        curr, idx = stack[-1]\n",
+    "        if idx == 0:\n",
+    "            order.append(curr)\n",
+    "            ranges[curr] = len(order) - 1, len(order) - 1\n",
+    "        if idx < len(adjl[curr]):\n",
+    "            stack[-1] = curr, idx + 1\n",
+    "            stack.append((adjl[curr][idx], 0))\n",
+    "        else:\n",
+    "            stack.pop()\n",
+    "            ranges[curr] = ranges[curr][0], len(order) - 1\n",
+    "\n",
+    "    # Answer the queries\n",
+    "    result: list[int] = []\n",
+    "    for officer, kth in queries:\n",
+    "        start, end = ranges[officer]\n",
+    "        if end - start + 1 >= kth:\n",
+    "            result.append(order[start + kth - 1])\n",
+    "        else:\n",
+    "            result.append(-1)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert military_problem(9, [1,2,2,3,5,3,6,7], [(1,5), (7,3), (1,8), (1,9)]) == [6,-1,9,4]\n",
+    "assert military_problem(9, [1,1,1,3,5,3,5,7], [(3,1), (1,5), (3,4), (7,3), (1,8), (1,9)]) == [3,6,8,-1,9,4]"
    ]
   }
  ],
