CP Practice - WIP - 22nd July 2024

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -1676,6 +1676,7 @@
      "iopub.status.idle": "2024-07-21T14:10:01.375302Z",
      "shell.execute_reply": "2024-07-21T14:10:01.374859Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013695,
      "end_time": "2024-07-21T14:10:01.376298",
@@ -1723,6 +1724,62 @@
     "# Testing the solution\n",
     "assert military_problem(9, [1,2,2,3,5,3,6,7], [(1,5), (7,3), (1,8), (1,9)]) == [6,-1,9,4]\n",
     "assert military_problem(9, [1,1,1,3,5,3,5,7], [(3,1), (1,5), (3,4), (7,3), (1,8), (1,9)]) == [3,6,8,-1,9,4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03b63bfc",
+   "metadata": {},
+   "source": [
+    "Binary Lifting - LCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "232e564a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/kth-ancestor-of-a-tree-node://leetcode.com/problems/kth-ancestor-of-a-tree-node/\n",
+    "class TreeAncestor:\n",
+    "    def __init__(self, N: int, parent: list[int]):\n",
+    "        # Store the ancestors into a sparse table\n",
+    "        self.ancestors: dict[int, collections.defaultdict[int, int]] = {}\n",
+    "\n",
+    "        # Store for level 1 (2 ** 0 => 1)\n",
+    "        pending: list[int] = []\n",
+    "        level = 0\n",
+    "        for node in range(N):\n",
+    "            self.ancestors[node] = collections.defaultdict(lambda: -1)\n",
+    "            self.ancestors[node][level] = parent[node]\n",
+    "            if self.ancestors[node][level] != -1:\n",
+    "                pending.append(node)\n",
+    "\n",
+    "        # Compute next level of ancestors until we hit -1 for all nodes\n",
+    "        level += 1\n",
+    "        while pending:\n",
+    "            still_pending: list[int] = []\n",
+    "            for node in pending:\n",
+    "                self.ancestors[node][level] = self.ancestors[self.ancestors[node][level - 1]][level - 1]\n",
+    "                if self.ancestors[node][level] != -1:\n",
+    "                    still_pending.append(node)\n",
+    "            pending, level = still_pending, level + 1\n",
+    "\n",
+    "    def getKthAncestor(self, node: int, K: int) -> int:\n",
+    "        while K > 0 and node != -1:\n",
+    "            jump = int(math.log2(K))\n",
+    "            node = self.ancestors[node][jump]\n",
+    "            K -= 1 << jump # k - (2 ** jump)\n",
+    "\n",
+    "        return node\n",
+    "\n",
+    "# Testing the solution\n",
+    "tree_ancestor = TreeAncestor(7, [-1, 0, 0, 1, 1, 2, 2])\n",
+    "assert tree_ancestor.getKthAncestor(5, 2) == 0\n",
+    "assert tree_ancestor.getKthAncestor(6, 3) == -1\n",
+    "assert tree_ancestor.getKthAncestor(6, 0) == 6\n",
+    "assert tree_ancestor.getKthAncestor(6, 9) == -1"
    ]
   }
  ],
