CP Practice - 24th July 2024

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -1933,6 +1933,7 @@
      "iopub.status.idle": "2024-07-23T17:41:05.311367Z",
      "shell.execute_reply": "2024-07-23T17:41:05.310911Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.021379,
      "end_time": "2024-07-23T17:41:05.312526",
@@ -1987,14 +1988,15 @@
     "        adjl[n2].append((n1, w))\n",
     "\n",
     "    # Run DFS and compute the level 1 ancestors\n",
-    "    stack: list[tuple[int, int, int, int]] = [(1, 0, 0, 0)]\n",
+    "    stack: list[tuple[int, int]] = [(1, 0)]\n",
+    "    ancestors[1][0] = (0, 0)\n",
     "    while stack:\n",
-    "        curr, prev, height, curr_weight = stack.pop()\n",
-    "        heights[curr] = height\n",
-    "        ancestors[curr][0] = (prev, curr_weight)\n",
+    "        curr, height = stack.pop()\n",
     "        for next_node, next_weight in adjl[curr]:\n",
     "            if next_node not in heights:\n",
-    "                stack.append((next_node, curr, height + 1, next_weight))\n",
+    "                heights[next_node] = height + 1\n",
+    "                ancestors[next_node][0] = (curr, next_weight)\n",
+    "                stack.append((next_node, height + 1))\n",
     "\n",
     "    # Compute the ancestors\n",
     "    for power in range(1, MAX_POWER):\n",
@@ -2015,6 +2017,44 @@
     "assert cycle_free_flow(3, 3, [(3,2,4814), (2,1,1832)], 3, [(2,1), (1,2), (3,1)]) == [1832, 1832, 1832]\n",
     "assert cycle_free_flow(5, 4, [(4,2,10348), (1,4,2690), (5,4,9807), (3,4,8008)], 5, [(5,4), (1,5)]) == [9807, 2690]\n",
     "assert cycle_free_flow(5, 4, [(1,3,2653), (4,1,322), (5,1,8657), (2,4,4896)], 5, [(4,2), (2,5), (1,3), (4,5)]) == [4896, 322, 2653, 322]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6f81d8c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def sortPeople(names: list[str], heights: list[int]) -> list[str]:\n",
+    "    return list(map(lambda x: x[1], sorted(zip(heights, names), reverse=True)))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sortPeople([\"Mary\",\"John\",\"Emma\"], [180,165,170]) == [\"Mary\",\"Emma\",\"John\"]\n",
+    "assert sortPeople([\"Alice\",\"Bob\",\"Bob\"], [155,185,150]) == [\"Bob\",\"Alice\",\"Bob\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76ca025a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def frequencySort(nums: list[int]) -> list[int]:\n",
+    "    freq: collections.Counter = collections.Counter(nums)\n",
+    "    result: list[int] = []\n",
+    "    for k, v in sorted(freq.most_common(), key=lambda x: (x[1], -x[0])):\n",
+    "        for i in range(v):\n",
+    "            result.append(k)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert frequencySort([1,1,2,2,2,3]) == [3,1,1,2,2,2]\n",
+    "assert frequencySort([2,3,1,3,2]) == [1,3,3,2,2]"
    ]
   }
  ],
