CP Practice - 27th July 2024

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -2628,6 +2628,7 @@
      "iopub.status.idle": "2024-07-26T15:58:10.200259Z",
      "shell.execute_reply": "2024-07-26T15:58:10.199796Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016545,
      "end_time": "2024-07-26T15:58:10.201343",
@@ -2640,52 +2641,256 @@
    "outputs": [],
    "source": [
     "def cyclic_components(N: int, E: int, edges: list[tuple[int, int]]) -> int:\n",
+    "    \"\"\"\n",
+    "    The take away: Component is a cycle iff all the vertices has degree of 2\n",
+    "    \"\"\"\n",
+    "\n",
     "    # Convert edges into adjl\n",
     "    adjl: collections.defaultdict[int, list[int]] = collections.defaultdict(list)\n",
     "    for n1, n2 in edges:\n",
     "        adjl[n1].append(n2)\n",
     "        adjl[n2].append(n1)\n",
     "\n",
-    "    # Do a DFS traversal and colors components\n",
-    "    color: int = 0\n",
-    "    components_with_cycle: dict[int, int] = dict()\n",
-    "    node_colors: dict[int, int] = dict()\n",
+    "    # Do a DFS traversal and color components, ensure all vertices have degree 2\n",
+    "    color = cycles = 0\n",
+    "    visited: set[int] = set()\n",
     "    for node in range(1, N + 1):\n",
-    "        if node not in node_colors:\n",
-    "            visit_count = len(node_colors)\n",
-    "            color, is_cyclic = color + 1, False\n",
-    "            stack: list[tuple[int, int]] = [(node, 0)]\n",
+    "        if node not in visited:\n",
+    "            is_cyclic = True\n",
+    "            stack: list[int] = [node]\n",
     "            while stack:\n",
-    "                curr, prev = stack.pop()\n",
-    "                node_colors[curr] = color\n",
+    "                curr = stack.pop()\n",
+    "                visited.add(curr)\n",
+    "                is_cyclic = is_cyclic and len(adjl[curr]) == 2\n",
     "                for next_node in adjl[curr]:\n",
-    "                    if next_node != prev:\n",
-    "                        if next_node in node_colors:\n",
-    "                            is_cyclic = True\n",
-    "                        else:\n",
-    "                            stack.append((next_node, curr))\n",
+    "                    if next_node not in visited:\n",
+    "                        stack.append(next_node)\n",
     "\n",
-    "            if is_cyclic:\n",
-    "                components_with_cycle[color] = len(node_colors) - visit_count\n",
+    "                        # Adding this one simple line improves runtime greatly\n",
+    "                        # Until we visit that node itself, we would continue adding\n",
+    "                        # that node into our stack that would greatly impact our overall runtime\n",
+    "                        visited.add(next_node)\n",
     "\n",
-    "    # Compute the number of edges for a component\n",
-    "    edge_counts: dict[int, int] = dict()\n",
-    "    for n1, n2 in edges:\n",
-    "        if node_colors[n1] in components_with_cycle:\n",
-    "            edge_counts[node_colors[n1]] = edge_counts.get(node_colors[n1], 0) + 1\n",
+    "            cycles += int(is_cyclic)\n",
     "\n",
-    "    # Count cyclic components: edge_count == node_count\n",
-    "    result = 0\n",
-    "    for color in components_with_cycle:\n",
-    "        if components_with_cycle[color] == edge_counts[color]:\n",
-    "            result += 1\n",
-    "\n",
-    "    return result\n",
+    "    return cycles\n",
     "\n",
     "# Testing the solution\n",
     "assert cyclic_components(5, 4, [(1,2), (3,4), (5,4), (3,5)]) == 1\n",
+    "assert cyclic_components(4, 4, [(1,2), (2,3), (1,3), (1,4)]) == 0\n",
     "assert cyclic_components(17, 15, [(1,8), (1,12), (5,11), (11,9), (9,15), (15,5), (4,13), (3,13), (4,3), (10,16), (7,10), (16,7), (14,3), (14,4), (17,6)]) == 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74825cad",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def graph_without_long_directed_paths(N: int, E: int, edges: list[tuple[int, int]]) -> str:\n",
+    "    \"\"\"\n",
+    "    The end graph must have nodes that all have either inward pointing or outward pointing.\n",
+    "\n",
+    "    We can color the nodes as inward pointing or outward pointing, ensure that when we\n",
+    "    revist a node in a cycle the color is still valid.\n",
+    "\n",
+    "    Once colors are determined, go through the edges once again and compute the direction of the edge.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Convert edges into Adjl\n",
+    "    adjl: collections.defaultdict[int, list[int]] = collections.defaultdict(list)\n",
+    "    for n1, n2 in edges:\n",
+    "        adjl[n1].append(n2)\n",
+    "        adjl[n2].append(n1)\n",
+    "\n",
+    "    # DFS traversal to color nodes\n",
+    "    colors: dict[int, int] = dict()\n",
+    "    stack: list[tuple[int, bool]] = [(1, True)]\n",
+    "    while stack:\n",
+    "        curr, flag = stack.pop()\n",
+    "        colors[curr] = flag\n",
+    "        for next_node in adjl[curr]:\n",
+    "            if next_node not in colors:\n",
+    "                stack.append((next_node, not flag))\n",
+    "                colors[next_node] = not flag\n",
+    "            elif colors[next_node] == flag:\n",
+    "                return ''\n",
+    "\n",
+    "    # Determine the direction of the edges\n",
+    "    directions: list[str] = []\n",
+    "    for n1, n2 in edges:\n",
+    "        directions.append('0' if colors[n1] else '1')\n",
+    "\n",
+    "    return ''.join(directions)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert graph_without_long_directed_paths(6, 5, [(1,5), (2,1), (1,4), (3,1), (6,1)]) in ('10100', '01011')\n",
+    "assert graph_without_long_directed_paths(5, 5, [(1,2), (2,3), (3,4), (4,5), (5,1)]) == ''\n",
+    "assert graph_without_long_directed_paths(4, 4, [(1,2), (2,3), (3,4), (4,1)]) in ('1010', '0101')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7f34172",
+   "metadata": {},
+   "source": [
+    "Matrix Exponentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "192edb88",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def plant(N: int) -> int:\n",
+    "    MOD = 10**9 + 7\n",
+    "    factor = pow(2, N - 1, MOD)\n",
+    "    return factor * (3 + 2 * (factor - 1))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert plant(8) == 32896\n",
+    "assert plant(2) == 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7cdcf8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def magic_gems_dp(N: int, M: int) -> int:\n",
+    "    MOD = 10**9 + 7\n",
+    "    dp: collections.defaultdict[int, int] = collections.defaultdict(lambda: 0)\n",
+    "    dp[0] = 1\n",
+    "    for i in range(1, N + 1):\n",
+    "        dp[i] = (dp[i - 1] + dp[i - M]) % MOD\n",
+    "\n",
+    "    return dp[N]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert magic_gems_dp(4, 2) == 5\n",
+    "assert magic_gems_dp(3, 2) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f092c54a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def magic_gems_equation_solving(N: int, M: int) -> int:\n",
+    "    def count_arrangements(x: int, y: int) -> int:\n",
+    "        return math.factorial(x + y) // (math.factorial(x) * math.factorial(y))\n",
+    "\n",
+    "    MOD = 10**9 + 7\n",
+    "    count = 0\n",
+    "    for i in range(N // M + 1):\n",
+    "        j = N - i * M\n",
+    "        count = (count + count_arrangements(i, j)) % MOD\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "for i in range(1, 100):\n",
+    "    for j in range(2, 100):\n",
+    "        assert magic_gems_dp(i, j) == magic_gems_equation_solving(i, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90dd8528",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def magic_gems(N: int, M: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Based on dp recurance relation: dp[n] = dp[n - 1] + dp[n - M].\n",
+    "    This would take linear time complexity but can be optimized using matrix exponentation.\n",
+    "\n",
+    "    Transformation matrix T repr initial state, N >= M (since N < M the initial state is simply [1 .... ])\n",
+    "    It can help us get from f(n) to f(n + 1)\n",
+    "    T . f(n) => f(n + 1)\n",
+    "\n",
+    "    Starting at T = f(1), we can get to f(n) by doing T ** (N - M + 1)\n",
+    "    T ** (N - M + 1) instead of N since we already started at point N >= M\n",
+    "\n",
+    "    Assume F(5, 3):\n",
+    "        f(1) = T would repr F(3, 3)\n",
+    "        f(2) = T . T = F(4, 3)\n",
+    "        f(3) = T . T . T = F(5, 3)\n",
+    "\n",
+    "    Which is T ** (N - M + 1)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def multiply_matrix(A: list[list[int]], B: list[list[int]], mod: int) -> list[list[int]]:\n",
+    "        # (m x n) . (n x p) => (m x p)\n",
+    "        assert len(A[0]) == len(B)\n",
+    "        M, N, P = len(A), len(A[0]), len(B[0])\n",
+    "        result: list[list[int]] = [[0 for j in range(P)] for i in range(M)]\n",
+    "        for i in range(M):\n",
+    "            for j in range(P):\n",
+    "                for k in range(N):\n",
+    "                    result[i][j] = (result[i][j] + A[i][k] * B[k][j]) % mod\n",
+    "        return result\n",
+    "\n",
+    "    def power_of_matrix(base: list[list[int]], exp: int, mod):\n",
+    "        size = len(base)\n",
+    "        # Identity matrix\n",
+    "        result: list[list[int]] = [[1 if i == j else 0 for j in range(size)] for i in range(size)]\n",
+    "        # Power of matrix by squaring\n",
+    "        while exp > 0:\n",
+    "            if exp % 2 == 1:\n",
+    "                result = multiply_matrix(result, base, mod)\n",
+    "            base = multiply_matrix(base, base, mod)\n",
+    "            exp //= 2\n",
+    "        return result\n",
+    "\n",
+    "    MOD = 10**9 + 7\n",
+    "\n",
+    "    if N < M:\n",
+    "        return 1\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        # Setup transformation matrix\n",
+    "        T = [[0 for j in range(M)] for i in range(M)]\n",
+    "        T[0][0] = T[0][M - 1] = 1\n",
+    "        for i in range(1, M):\n",
+    "            T[i][i - 1] = 1\n",
+    "\n",
+    "        # Raise T to the power (N - M + 1)\n",
+    "        result_matrix = power_of_matrix(T, N - M + 1, MOD)\n",
+    "\n",
+    "        # Return sum of T[0]\n",
+    "        return sum(result_matrix[0][i] % MOD for i in range(M)) % MOD\n",
+    "\n",
+    "# Testing the solution\n",
+    "for i in range(1, 25):\n",
+    "    for j in range(2, 25):\n",
+    "        assert magic_gems_dp(i, j) == magic_gems(i, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d518d53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
